<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileInfosLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/profilePicView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePicView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="8dp"
        android:id="@+id/linearLayout2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/followersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/followers"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_220"
                android:textColor="#000" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/followingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/followings"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:text="@string/_500" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/friendsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:text="@string/friends"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:text="@string/_220" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/showMemoriesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#000"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/youAreFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_friends"
            android:gravity="center"
            android:textColor="@color/green"
            android:textSize="22sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sendFriendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friendRequest"
            android:onClick="sendFriendRequest"
            android:visibility="gone"/>

        <Button
            android:id="@+id/removeFriendShipRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_friend_request"
            android:onClick="removeFriendRequest"
            android:visibility="gone"/>
        <Button
            android:id="@+id/confirmFriendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_friend_request"
            android:onClick="confirmFriendRequest"
            android:visibility="gone"/>

        <Button
            android:id="@+id/refuseFriendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refuse_friend_request"
            android:onClick="refuseFriendRequest"
            android:visibility="gone"/>

        <Button
            android:id="@+id/removeFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_friend"
            android:onClick="removeFriend"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:gravity="end">

        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logOut"
            android:text="@string/log_out"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include
            layout="@layout/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</RelativeLayout>