<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.melody.EditUserInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/friends_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_user_profile"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/display_name_container"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/edit_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_user_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/change_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/edit_display_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_display_name" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/user_profile_container"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_name_container">

            <TextView
                android:id="@+id/change_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_photo"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                android:onClick="changeProfileImage"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/user_bio_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_container">

            <TextView
                android:id="@+id/edit_user_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/change_biography"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/change_user_bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="4"
                android:hint=""
                app:layout_constraintTop_toBottomOf="@+id/edit_user_bio"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/save_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="changeUserProfile"
            android:text="@string/save"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_container"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
