<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.melody.DetailedMemoryActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/memoryAuthorPic"
                android:layout_width="105dp"
                android:layout_height="93dp"
                android:layout_marginLeft="49dp"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded"
                android:layout_marginStart="49dp" />

            <TextView
                android:id="@+id/memoryDate"
                android:layout_width="190dp"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/memoryAuthorPic"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryAuthor"
                tools:ignore="RtlHardcoded"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/memoryLocation"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:layout_marginLeft="49dp"
                android:layout_marginTop="15dp"
                android:text="@string/country_city"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryAuthorPic"
                tools:ignore="RtlHardcoded"
                android:layout_marginStart="49dp" />

            <ImageView
                android:id="@+id/likes"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="14dp"
                android:contentDescription=""
                app:layout_constraintLeft_toRightOf="@+id/memoryLocation"
                app:srcCompat="@android:drawable/btn_star_big_on"
                tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/memoryDate" />

            <TextView
                android:id="@+id/memoryAuthor"
                android:layout_width="187dp"
                android:layout_height="37dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="54dp"
                android:text="@string/username"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/memoryAuthorPic"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/memoryPicture"
                android:layout_width="312dp"
                android:layout_height="113dp"
                android:layout_marginEnd="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginRight="43dp"
                android:layout_marginStart="43dp"
                android:layout_marginTop="23dp"
                android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryText"
                app:srcCompat="@mipmap/photo"
                tools:ignore="ContentDescription"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/memoryText"
                android:layout_width="308dp"
                android:layout_height="84dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="39dp"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.827"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryLocation" />

            <TextView
                android:id="@+id/likeNumber"
                android:layout_width="29dp"
                android:layout_height="25dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.958"
                app:layout_constraintLeft_toRightOf="@+id/likes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/likes"
                app:layout_constraintTop_toBottomOf="@+id/memoryDate"
                tools:ignore="MissingConstraints,RtlHardcoded"
                android:layout_marginEnd="50dp" />

            <LinearLayout
                android:id="@+id/memoryComments"
                android:layout_width="314dp"
                android:layout_height="144dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="43dp"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryPicture" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include
        layout="@layout/menu_layout"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginRight="9dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/include" />

</android.support.constraint.ConstraintLayout>
